--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag openjdk:latest
-           docker tag openjdk:latest ifreecomm/openjdk:ffmpeg
-           docker login -u kangliqi -p ${{ secrets.DOCKERHUB_TOKEN }}
-           docker push ifreecomm/openjdk:ffmpeg
+      run: |
+        docker build . --file Dockerfile --tag openjdk:latest
+        docker tag openjdk:latest ifreecomm/openjdk:ffmpeg
+        docker login -u kangliqi -p ${{ secrets.DOCKERHUB_TOKEN }}
+        docker push ifreecomm/openjdk:ffmpeg
