--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,6 @@ jobs:
         docker push ifreecomm/openjdk:ffmpeg
         
         # to aliyun
-        docker tag openjdk:latest registry.cn-hangzhou.aliyuncs.com/code4thought/openjdk:ffmpeg
-        docker login --username=openjdk@1039415177396567 --password=${{ secrets.ALIYUN_ACCESS_KEY }} registry.cn-hangzhou.aliyuncs.com
-        docker push registry.cn-hangzhou.aliyuncs.com/code4thought/openjdk:ffmpeg
+        # docker tag openjdk:latest registry.cn-hangzhou.aliyuncs.com/code4thought/openjdk:ffmpeg
+        # docker login --username=openjdk@1039415177396567 --password=${{ secrets.ALIYUN_ACCESS_KEY }} registry.cn-hangzhou.aliyuncs.com
+        # docker push registry.cn-hangzhou.aliyuncs.com/code4thought/openjdk:ffmpeg
