--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         
         # to dockerhub
         docker tag openjdk:latest ifreecomm/openjdk:ffmpeg
-        docker login -u kangliqi -p ${{ secrets.DOCKERHUB_TOKEN }}
+        docker login -u zyq0407 -p ${{ secrets.DOCKERHUB_TOKEN }}
         docker push ifreecomm/openjdk:ffmpeg
         
         # to aliyun
